# server/http/router.go
@@ -114,6 +114,7 @@ func (h *HttpService) InitAndStartHttpService(ctx context.Context) (shutDown fun
 		checkToken.POST("/manage/catchword/add", h.ctrl.userCtrl.AddCatchword)
 		checkToken.POST("/manage/catchword/update", h.ctrl.userCtrl.UpdateCatchword)
 		checkToken.POST("/manage/catchword/delete", h.ctrl.userCtrl.DeleteCatchword)
+		checkToken.GET("/manage/catchword/query", h.ctrl.userCtrl.QueryCatchword)
 	}
 
 	{
